# symphonic-code

./: README.md
symphonic-code-r396/amarokmd/trunk/: Makefile.am  README
symphonic-code-r396/amarokmd/trunk/sonynw/: Makefile.am  amarok_sonynw-mediadevice.desktop  sonynwmediadevice.cpp  sonynwmediadevice.h
symphonic-code-r396/documentation/: .omgaudio_files.xls.autosave.ods  Symphonic-architecture.dia  Symphonic-architecture.dia.autosave
symphonic-code-r396/documentation/Developers/: SymphonicTeam.ods
symphonic-code-r396/documentation/Reverse engineering/: omgaudio_files_version2.xls
symphonic-code-r396/documentation/logo/: JSymphonic-Logo.ai
symphonic-code-r396/documentation/metricjester/: README_online_template.html  README_sources.txt  README_v0.3.0b.html
symphonic-code-r396/documentation/metricjester/Offline Documentation Template/: README.html
symphonic-code-r396/documentation/metricjester/old text ones/: README.txt  README_v0.3.0a1.txt  README_v0.3.0a2.txt  README_v0.3.0b.txt
symphonic-code-r396/javastage/trunk/: build.xml
symphonic-code-r396/javastage/trunk/nbproject/: build-impl.xml  genfiles.properties  project.properties  project.xml
symphonic-code-r396/jsymphonic/tags/v0.1.1b/: build.xml
symphonic-code-r396/jsymphonic/tags/v0.3.0/: build.xml
symphonic-code-r396/jsymphonic/tags/v0.3.0a1/: build.xml
symphonic-code-r396/jsymphonic/trunk/: build.xml
symphonic-code-r396/libsonynw/trunk/: Doxyfile  Makefile  ReadMe.txt  libsonynw.pro
symphonic-code-r396/symphonic/trunk/: Doxyfile  Makefile
(+823 files in other folders)
